# ETL_scripts

./: .gitignore  extract.py  load.py  main.py  pyproject.toml  transform.py
mysql-to-s3/: --mysql service account cration.txt
mysql-to-s3/Extract/: extract.py
tests/: test_pipeline.py
