[project]
name = "etl-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.48",
    "pandas>=3.0.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "s3fs>=0.4.2",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.3",
]
